<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/on_boarding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/on_boarding"
        >

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="372dp"
            android:layout_marginEnd="15dp"
            android:gravity="right|top"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_skip"
            android:textAppearance="@style/skip" />

        <RelativeLayout
            android:id="@+id/undraw_stri"
            android:layout_width="215dp"
            android:layout_height="236dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="99dp"
            android:layout_marginTop="94dp"
            android:layout_marginEnd="97dp"
            android:clipToOutline="true"
            android:background="@drawable/obboarding_1_image"/>

        <TextView
            android:id="@+id/monitoring_"
            android:layout_width="203dp"
            android:layout_height="62dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="104dp"
            android:layout_marginTop="367dp"
            android:layout_marginEnd="104dp"
            android:contextClickable="false"
            android:gravity="center_horizontal"
            android:text="@string/msg_monitoring_soil"
            android:textAppearance="@style/monitoring_"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/we_aim_to_u"
            style="@style/we_aim_to_u"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="74dp"
            android:layout_marginTop="442dp"
            android:layout_marginEnd="76dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/msg_we_aim_to_use_optical"
            android:textAppearance="@style/we_aim_to_u" />

        <RelativeLayout
            android:id="@+id/frame_1197"
            android:layout_width="132dp"
            android:layout_height="7dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="589dp"
            android:layout_marginEnd="139dp">

            <View
                android:id="@+id/rectangle_3"
                android:layout_width="35dp"
                android:layout_height="6dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/rectangle_3" />

            <View
                android:id="@+id/rectangle_4"
                android:layout_width="35dp"
                android:layout_height="6dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/rectangle_4" />

            <View
                android:id="@+id/rectangle_5"
                android:layout_width="35dp"
                android:layout_height="6dp"
                android:layout_marginLeft="97dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/rectangle_5" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frame_1198"
            android:layout_width="354dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="645dp"
            android:layout_marginEnd="28dp" >
            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/back"
                android:layout_width="172dp"
                android:layout_height="40dp"
                android:text="@string/lbl_back"
                android:background="@drawable/rectangle_2"
                android:textAlignment="center"
                android:gravity="center"
                android:textAppearance="@style/back" />
            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/frame_1200"
                android:layout_width="172dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="182dp"
                android:text="@string/lbl_next"
                android:layout_alignParentTop="true"
                android:textAlignment="center"
                android:gravity="center"
                android:background="@drawable/rectangle_1"
                android:textAppearance="@style/next"

                />
        </RelativeLayout>



    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>